tom UI improvements

--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -8440,7 +8440,6 @@
       "x-ai/grok-3-mini supports logprobs\n",
       "x-ai/grok-3 supports logprobs\n",
       "deepseek/deepseek-r1-0528 supports logprobs\n",
-      "qwen/qwen3-30b-a3b supports logprobs\n",
       "qwen/qwen3-32b supports logprobs\n",
       "qwen/qwen3-235b-a22b supports logprobs\n",
       "x-ai/grok-3-mini-beta supports logprobs\n",
@@ -8486,9 +8485,18 @@
    ],
    "source": [
     "import requests\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()\n",
+    "\n",
+    "model_name='meta-llama/llama-3.3-70b-instruct'#'google/gemini-2.5-flash'#'openai/gpt-5'#'anthropic/claude-opus-4.1'#\n",
+    "provider = \"OpenRouter\"\n",
+    "def no_logprobs(model_name):\n",
+    "    if \"o3\" in model_name or 'gpt-5' in model_name or model_name in ['deepseek/deepseek-v3.1-base', 'deepseek/deepseek-r1']: return True\n",
+    "    return False\n",
+    "openrouter_api_key = os.environ.get(\"SPAR2025_OPENROUTER_KEY\")\n",
     "\n",
     "headers = {\n",
-    "    \"Authorization\": \"Bearer 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\"\n",
+    "    \"Authorization\": f\"Bearer {openrouter_api_key}\"\n",
     "}\n",
     "\n",
     "response = requests.get(\n",
