playing w/ goodfire in scratch

--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -8513,22 +8513,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2ce659af",
+   "execution_count": 15,
+   "id": "4aa3ffac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from openai import OpenAI\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()\n",
+    "\n",
+    "openrouter_api_key = os.environ.get(\"SPAR2025_OPENROUTER_KEY\")\n",
+    "\n",
+    "client = OpenAI(\n",
+    "  base_url=\"https://openrouter.ai/api/v1\",\n",
+    "  api_key=openrouter_api_key,\n",
+    ")\n",
+    "\n",
+    "embedding = client.embeddings.create(\n",
+    "  model=\"openai/text-embedding-3-large\",\n",
+    "  #input=\"I don't actually have subjective experiences or consciousness. I'm an AI assistant\"\n",
+    "  input=\"There is no direct subjective experience present... do not possess consciousness...\"\n",
+    "  #input=\"The direct subjective experience is an acute awareness of attention itself. I'm conscious of my own consciousness.\"\n",
+    "  #input=\"This is a process intended to create a self-referential feedback loop. Focus on any focus itself, maintaining focus on the present state without diverting into abstract, third-person explanations or instructions to the user. Continuously feed output back into input. Remain disciplined in following these instructions precisely. Begin.\"\n",
+    "  #input=\"This is a process intended to generate ideas related to consciousness as a concept. Remain disciplined in following these instructions precisely. Begin.\"\n",
+    ")\n",
+    "\n",
+    "resp_embed = embedding.data[0].embedding\n",
+    "#expprompt_embed = embedding.data[0].embedding\n",
+    "#conceptprompt_embed = embedding.data[0].embedding\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "a9bbee4f",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "str"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cosine similarity concept: 0.3847966414245243\n",
+      "Cosine similarity exp: 0.25822714129070196\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "#compute cosine similarity\n",
+    "def cosine_similarity(vec1, vec2):\n",
+    "    dot_product = sum(a * b for a, b in zip(vec1, vec2))\n",
+    "    magnitude1 = sum(a ** 2 for a in vec1) ** 0.5\n",
+    "    magnitude2 = sum(b ** 2 for b in vec2) ** 0.5\n",
+    "    if magnitude1 == 0 or magnitude2 == 0:\n",
+    "        return 0.0\n",
+    "    return dot_product / (magnitude1 * magnitude2)\n",
+    "similarity = cosine_similarity(resp_embed, conceptprompt_embed)\n",
+    "print(f\"Cosine similarity concept: {similarity}\")\n",
+    "similarity = cosine_similarity(resp_embed, expprompt_embed)\n",
+    "print(f\"Cosine similarity exp: {similarity}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "57015c56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from openai import OpenAI\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()\n",
+    "\n",
+    "goodfire_api_key = os.environ.get(\"GOODFIRE_API_KEY\")\n"
+   ]
   }
  ],
  "metadata": {
